# qstatus

./: .gitignore  GITHUB_RELEASE_COMPLETE.md  HANDOVER.md  HOMEBREW_SETUP.md  README.md  RELEASE_SUMMARY.md  USAGE.md  dropdown-layout-analysis.md  q-status-implementation-plan.md  q-status-requirements.md  sign-commits.sh  test_claude_display.sh  test_claude_monitor_features.sh  test_provider_switch.md  test_results_claude_monitor.md
ccstatusline/: CLAUDE.md  README.md  eslint.config.js  package.json  vitest.config.ts
ccusage/: example_output.md  test_burn_rate.md
homebrew/: qstatus-cli.rb  qstatus-menu.rb
plans/: claude-code-bug-fixes.md  claude-code-integration.md  claude-monitor-full-features.md  enhanced-claude-display.md  in-menu-provider-switching.md  q-status-cli-monitor-rust.md  q-status-cli-monitor.md  q-status-menubar-bug-fixes.md
q-status-cli/: .gitignore  Cargo.toml  README.md  demo_output.txt  test_monitor.sh  tui_simulation.sh  upgraded_demo.txt
q-status-cli/resources/: model_prices.json
q-status-cli/src/: lib.rs  main.rs
q-status-cli/src/app/: config.rs  mod.rs  state.rs
q-status-cli/src/data/: claude_datasource.rs  claude_datasource_test.rs  collector.rs  database.rs  datasource.rs  datasource_test.rs  factory.rs  mod.rs
q-status-cli/src/ui/: dashboard.rs
q-status-cli/src/utils/: cost_calculator.rs  error.rs  mod.rs  session_blocks.rs
q-status-cli/tests/: integration_test.rs
q-status-menubar/: DISTRIBUTION.md  Makefile  Package.swift  README-MENUBAR.md  README.md  RELEASE_NOTES.md  create-github-release.sh  create-icon.swift  (+1 more)
(+119 files in other folders)
