[package]
name = "q-status"
version = "0.3.0"
edition = "2021"
authors = ["Q-Status Team"]
description = "High-performance token usage monitor for Amazon Q CLI"
license = "MIT"

[dependencies]
# Core TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
crossbeam-channel = "0.5"

# File watching
notify = "6.1"

# Configuration
toml = "0.8"
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
humantime = "2.1"
byte-unit = "5.0"
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"

# Logging (optional, for debug mode)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false

# Platform-specific optimizations
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[[bin]]
name = "q-status"
path = "src/main.rs"